added all dependencies to the package.json file

--- a/src/pages/Register/register.styles.scss
+++ b/src/pages/Register/register.styles.scss
@@ -25,6 +25,8 @@ a, a:visited {
     color: #fff;
 }
 
+git@github.com:Iphycodes/Form-valiidation.git
+
 input[type="text"],
 input[type="password"],
 button,
